tests/suite/snapshots/suite__check__tests__check__bad_var_shadowing_3.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_var_shadowing_3.xi:6:31]
   │
 1 │ bar(foo: int) {
   ·     ─┬─  
   ·      ╰─── Previous definition here
   · 
 6 │                     bar, baz, foo: int
   ·                               ─┬─  
   ·                                ╰─── Name already bound in environment
───╯

