tests/suite/snapshots/suite__check__tests__check__pa3-2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
Valid Xi Program
