tests/suite/snapshots/suite__check__tests__check__var_shadowing_4.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Valid Xi Program
